--- a/about.html
+++ b/about.html
@@ -95,17 +95,17 @@
                     <h4 style="text-align: left">深圳市晟星云科技有限公司</h4>
                 </li>
                 <li class="about_p" style="margin-top: 10px;">
-                  <p>联系人：杨小川</p>
+                  <p>联系人：郭薇薇</p>
                 </li>
                 <li class="about_p">
-                    <p>联系电话：18566252595</p>
+                    <p>联系电话：18334599509</p>
                 </li>
                 <li>
                     <p>中国 · 深圳</p>
                     <p>深圳龙岗区龙城街道乐年广场13A栋1312房</p>
                 </li>
                 <li class="about_p">
-                    <p>电子邮箱：yangxiaochuan1982@aliyun.com</p>
+                    <p>电子邮箱：1628842766@qq.com</p>
                 </li>
             </ul>
         </div>
@@ -123,7 +123,7 @@
     <!--备案号-->
     <div class="footer-button">
         <div class="container">
-          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18566252595 | 邮箱: yangxiaochuan1982@aliyun.com</p>
+          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18334599509 | 邮箱: 1628842766@qq.com</p>
             
         </div>
     </div>
