--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="col-md-6">
                 <h3><a href="about.html">晟星云文化</a></h3>
                 <ul>
-                    <li class="text-left">晟星云的宗旨是建立长期的合作关系，以客户的需求为核心，为他们提供最佳的解决方案。公司将秉承诚信、创新和卓越的价值观，持续改进产品和服务质量，以满足市场的需求，并积极参与社会责任活动。</li>
+                    <li class="text-left">晟星云的宗旨是建立长期的合作关系，以客户的需求为核心，为他们提供最佳的解决方案。公司将秉承诚信、创新和卓越的价值观，我们积极支持研发和投资，以不断提高我们的产品质量和工艺效率，满足客户不断变化的需求。我们坚持诚信经营，遵守合法合规的商业道德标准。我们对我们的客户、员工和合作伙伴负责，始终以诚信对待每一位利益相关者。我们尊重知识产权，保护商业机密，坚守承诺，不断提高我们的企业声誉。我们积极履行社会责任，关注社会发展和公益事业。我们努力降低对环境的影响，支持本地社区和慈善活动。我们致力于与社会各界建立合作伙伴关系，共同推动可持续发展。</li>
                     
                 </ul>
             </div>
@@ -191,7 +191,7 @@
     <!--备案号-->
     <div class="footer-button">
         <div class="container">
-          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18566252595 | 邮箱: yangxiaochuan1982@aliyun.com</p>
+          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18334599509 | 邮箱: 1628842766@qq.com</p>
             
         </div>
     </div>
