--- a/products.html
+++ b/products.html
@@ -125,7 +125,7 @@
     <!--备案号-->
     <div class="footer-button">
         <div class="container">
-            <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18566252595 | 邮箱: yangxiaochuan1982@aliyun.com</p>
+            <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18334599509 | 邮箱: 1628842766@qq.com</p>
             
         </div>
     </div>
