--- a/profuile.html
+++ b/profuile.html
@@ -73,7 +73,7 @@
                 </p>
             </div>
             <a href="" class="col-md-6">
-                <img class="img1" src="http://0.rc.xiniu.com/g2/M00/08/FE/CgAGe1mdLo2AYNMzAAFdPNqcJmU101.jpg" alt="">
+                <img class="img1" src="images/home/home.jpeg" alt="">
             </a>
 
         </div>
@@ -81,35 +81,29 @@
             <div class="col-md-6">
                 <h2>企业文化</h2>
                 <p>
-                    <b>企业使命:</b>为消费者提供高品质家居生活整体决方案
+                    <b>企业使命:</b>通过创新和卓越运营，满足客户不断变化的需求
                     <br>
-                    <b>企业原景:</b>致力于成为柔性定制家居领域领导品牌
-                    <br>
-                    <b>公司价值观</b>:勇于承担责任,以敬畏之心服务户,以无畏之心超越自我,感恩奉献,正直守信
+                    <b>公司价值观</b>:品质第一，诚信为本
                     <br>
                     <b>企业理念:</b>以用户需求为导向,坚持品质卓越,服务创新,实现企业持续发展
                     <br>
                     <b>企业精神:</b>传承匠心精神,勤谨敬业,追求品质卓越,精益求精晟星云行为准则
                     <br>
-                    第一条顾客利益至高无上
+                    第一条:客户利益至高无上
                     <br>
-                    第二条:服务为本,一切以顾需求为中心
+                    第二条:服务为本,一切以客户需求为中心
                     <br>
-                    第三条:细节为王!追求产品极致的决心不可动摇
+                    第三条:品质为王,追求产品高品质的决心不可动摇
                     <br>
                     第四条:创新为赢,永远站在行业的最前沿
                     <br>
-                    第五条:合作共生,所有合作伙件的利益就是我们的益
+                    第五条:合作共生,所有合作伙件的利益就是我们的利益
                     <br>
-                    第六条:协同创适,群体的价值比个体价值的忘和还要高
-                    <br>
-                    企业责任:创造和谐人居环填,而社服务大众
-                    <br>
-                    <b>企业责任:创造和谐人居环境,贡献社会,服务大众</b>
+                    在我们的企业文化指引下，我们坚信，化工先锋，创新引领，我们将不断超越自我，迎接挑战，为客户提供满意的产品。
                     <br>
                 </p>
             </div>
-            <a href="" class="col-md-6"><img src="img/wenhua.jpg" alt=""></a>
+            <a href="" class="col-md-6"><img src="images/home/cooperate.jpeg" alt=""></a>
 
         </div>
     </div>
@@ -119,7 +113,7 @@
     <!--备案号-->
     <div class="footer-button">
         <div class="container">
-          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18566252595 | 邮箱: yangxiaochuan1982@aliyun.com</p>
+          <p> 晟星云科技有限公司 | 粤ICP备100000092号 | 联系电话: 18334599509 | 邮箱: 1628842766@qq.com</p>
         </div>
     </div>
 </footer>
