--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="logo" href="index.html"><img class="logo" src="images/home/logo.png" alt=""><h1>晟星云橱柜</h1></a>
+                <a class="logo" href="index.html"><img class="logo" src="images/home/logo.png" alt=""><h1>深圳晟星云科技有限公司</h1></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
