--- a/profuile.html
+++ b/profuile.html
@@ -38,10 +38,9 @@
                 </button>
                 <a class="logo" href="index.html">
                     <img class="logo" src="images/home/logo.png" alt="">
-                    <h1>晟星云科技有限公司</h1>
+                    <h1>深圳晟星云科技有限公司</h1>
                 </a>
             </div>
-            <h1>晟星云科技有限公司</h1>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
