--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="logo" href="index.html"><img class="logo" src="images/home/logo.png" alt="">
-                    <h1>晟星云科技有限公司</h1></a>
+                    <h1>深圳晟星云科技有限公司</h1></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
